--- a/cse151a_pokemon_project_exploration.ipynb
+++ b/cse151a_pokemon_project_exploration.ipynb
@@ -551,7 +551,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TODO: ADD EXPLAINATIONS OF WHAT EACH PRICE MEANS AND WHY WE NEEDED TO MAKE SO MANY SUBSETS "
+    "## TODO: ADD EXPLAINATIONS OF WHAT EACH PRICE MEANS AND WHY WE NEEDED TO MAKE SO MANY SUBSETS \n",
+    "\n",
+    "The following subsets are divisions of the main dataset seperated into the different prices we want to train our models on. Each feature contains a price based on the selling price of a specific Pokémon Card according to their grade.\n",
+    "\n",
+    "1. cib_price_sub: Subset of the prices of Pokémon Cards graded as a 7 or 7.5\n",
+    "2. bgs_price_sub: Subset of the prices of Pokémon Cards graded as a 10 by BGS\n",
+    "3. box_only_price_sub: Subset of the prices of Pokémon Cards graded as a 9.5\n",
+    "4. condition_17_price_sub: Subset of the prices of Pokémon Cards graded as a 10 by CGC\n",
+    "4. condition_18_price_sub: Subset of the prices of Pokémon Cards graded as a 10 by SGC\n",
+    "5. graded_price_sub: Subset of the prices of Pokémon Cards graded as a 9\n",
+    "6. loose_sub: Subset of the prices of Pokémon Cards that are ungraded\n",
+    "7. new_price_sub: Subset of the prices of Pokémon Cards that are graded as a 8 or 8.5\n",
+    "8. manual_only_price_sub: Subset of the prices of Pokémon Cards that are graded as a 10 by PSA\n",
+    "\n",
+    "BGS, CGC, SGC, and PSA are all grading companies that assess the quality of the Pokémon Card and assign a grade to the card. We want to split the data into subsets in order to accurately predict the price of a Pokémon Card across all companies based on grade. Since there is variation in price based on which company is grading the card, splitting the data into different sets will give our model the best chance to predict a card's value. This also allows us to create a variety of models in order to choose the best model that accurately predicts a card's value based on their grade."
    ]
   },
   {
