--- a/cse151a_pokemon_project_exploration.ipynb
+++ b/cse151a_pokemon_project_exploration.ipynb
@@ -551,7 +551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TODO: ADD EXPLAINATIONS OF WHAT EACH PRICE MEANS AND WHY WE NEEDED TO MAKE SO MANY SUBSETS \n",
+    "# Prices and Data Subsets\n",
     "\n",
     "The following subsets are divisions of the main dataset seperated into the different prices we want to train our models on. Each feature contains a price based on the selling price of a specific Pokémon Card according to their grade.\n",
     "\n",
