Add EDA for new data

--- a/cse151a_pokemon_project_exploration.ipynb
+++ b/cse151a_pokemon_project_exploration.ipynb
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 864,
+   "execution_count": 904,
    "metadata": {},
    "outputs": [
     {
@@ -717,11 +717,12 @@
      "text": [
       "Console Name:  134\n",
       "Product Name:  28522\n",
-      "Types:  36\n",
+      "Types:  37\n",
       "Super Type:  3\n",
       "Sub Type:  110\n",
       "Weaknesses:  63\n",
-      "Artist:  302\n"
+      "Artist:  302\n",
+      "Generation:  11\n"
      ]
     }
    ],
@@ -733,7 +734,7 @@
     "print('Sub Type: ', price_guide_tcg['subtypes'].nunique())\n",
     "print('Weaknesses: ', price_guide_tcg['weaknesses'].nunique())\n",
     "print('Artist: ', price_guide_tcg['artist'].nunique())\n",
-    "print('Generation: ', price_guide_tcg['gene'].nunique())"
+    "print('Generation: ', price_guide_tcg['generation'].nunique())"
    ]
   },
   {
