--- a/Milestone3-Preprocessing-Model1.ipynb
+++ b/Milestone3-Preprocessing-Model1.ipynb
@@ -276,13 +276,458 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "fc06383c-e97c-4317-91e0-aed8eb54b4da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "categorical_columns = ['console-name', 'product-name', 'set', 'series', 'publisher', 'generation', 'rarity']"
+    "categorical_columns = [\n",
+    "    'tcg_id', 'console-name', 'product-name', 'release-date', 'set',\n",
+    "    'series', 'publisher', 'generation', 'artist', 'name', 'set_num',\n",
+    "    'types', 'supertype', 'subtypes', 'weaknesses', 'rarity',\n",
+    "    'legalities', 'resistances'\n",
+    "]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3851acc8-957f-4b46-a9a9-15beb4d82737",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in categorical_columns:\n",
+    "    if col in price_guide_tcg.columns:\n",
+    "        le = LabelEncoder()\n",
+    "        price_guide_tcg[col] = le.fit_transform(price_guide_tcg[col].astype(str))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77c4da39-e15b-4093-81ee-3b6a46262f09",
+   "metadata": {},
+   "source": [
+    "## Price Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "90e61078-2888-4ec5-850f-bf9c98398fa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "price_columns = [\n",
+    "    'loose-price', 'graded-price', 'box-only-price', 'manual-only-price',\n",
+    "    'bgs-10-price', 'condition-17-price', 'condition-18-price'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "de132fa9-a194-4992-8f41-f4fc05af8480",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zscore_threshold = 3\n",
+    "for col in price_columns:\n",
+    "    if col in price_guide_tcg.columns:\n",
+    "        price_guide_tcg = price_guide_tcg[(np.abs(zscore(price_guide_tcg[col], nan_policy='omit')) < zscore_threshold)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "381d0b7e-172d-405a-afc0-ba5c3b6a0f91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tcg_id</th>\n",
+       "      <th>id</th>\n",
+       "      <th>console-name</th>\n",
+       "      <th>product-name</th>\n",
+       "      <th>loose-price</th>\n",
+       "      <th>graded-price</th>\n",
+       "      <th>box-only-price</th>\n",
+       "      <th>manual-only-price</th>\n",
+       "      <th>bgs-10-price</th>\n",
+       "      <th>condition-17-price</th>\n",
+       "      <th>...</th>\n",
+       "      <th>name</th>\n",
+       "      <th>set_num</th>\n",
+       "      <th>types</th>\n",
+       "      <th>supertype</th>\n",
+       "      <th>subtypes</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>weaknesses</th>\n",
+       "      <th>rarity</th>\n",
+       "      <th>legalities</th>\n",
+       "      <th>resistances</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16290</td>\n",
+       "      <td>959175.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>101</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>15.11</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>38.94</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>282</td>\n",
+       "      <td>36</td>\n",
+       "      <td>2</td>\n",
+       "      <td>102</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>63</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>16244</td>\n",
+       "      <td>959046.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>612</td>\n",
+       "      <td>3.24</td>\n",
+       "      <td>28.09</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>41.00</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>104</td>\n",
+       "      <td>210</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>16311</td>\n",
+       "      <td>959105.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>613</td>\n",
+       "      <td>9.77</td>\n",
+       "      <td>32.76</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>109.86</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>104</td>\n",
+       "      <td>307</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>26</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>16292</td>\n",
+       "      <td>959088.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>618</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>14.17</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>37.30</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100</td>\n",
+       "      <td>284</td>\n",
+       "      <td>36</td>\n",
+       "      <td>2</td>\n",
+       "      <td>56</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>63</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>16292</td>\n",
+       "      <td>959176.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>619</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>7.85</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>38.29</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100</td>\n",
+       "      <td>284</td>\n",
+       "      <td>36</td>\n",
+       "      <td>2</td>\n",
+       "      <td>56</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>63</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30288</th>\n",
+       "      <td>15240</td>\n",
+       "      <td>806714.0</td>\n",
+       "      <td>133</td>\n",
+       "      <td>27986</td>\n",
+       "      <td>4.52</td>\n",
+       "      <td>27.33</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>62.54</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3859</td>\n",
+       "      <td>320</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30289</th>\n",
+       "      <td>15219</td>\n",
+       "      <td>806575.0</td>\n",
+       "      <td>133</td>\n",
+       "      <td>28110</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>25.95</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>190.75</td>\n",
+       "      <td>286.0</td>\n",
+       "      <td>248.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3874</td>\n",
+       "      <td>295</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30292</th>\n",
+       "      <td>15147</td>\n",
+       "      <td>886726.0</td>\n",
+       "      <td>133</td>\n",
+       "      <td>28117</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>50.00</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>60.00</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3876</td>\n",
+       "      <td>60</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>26</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30293</th>\n",
+       "      <td>15220</td>\n",
+       "      <td>806576.0</td>\n",
+       "      <td>133</td>\n",
+       "      <td>28118</td>\n",
+       "      <td>4.11</td>\n",
+       "      <td>23.00</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>59.13</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3876</td>\n",
+       "      <td>296</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30295</th>\n",
+       "      <td>15214</td>\n",
+       "      <td>806571.0</td>\n",
+       "      <td>133</td>\n",
+       "      <td>28374</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>19.00</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>39.50</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3906</td>\n",
+       "      <td>287</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>82</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19297 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       tcg_id        id  console-name  product-name  loose-price  \\\n",
+       "3       16290  959175.0             0           101         1.54   \n",
+       "4       16244  959046.0             0           612         3.24   \n",
+       "5       16311  959105.0             0           613         9.77   \n",
+       "6       16292  959088.0             0           618         1.25   \n",
+       "7       16292  959176.0             0           619         1.54   \n",
+       "...       ...       ...           ...           ...          ...   \n",
+       "30288   15240  806714.0           133         27986         4.52   \n",
+       "30289   15219  806575.0           133         28110         2.76   \n",
+       "30292   15147  886726.0           133         28117        16.00   \n",
+       "30293   15220  806576.0           133         28118         4.11   \n",
+       "30295   15214  806571.0           133         28374         1.32   \n",
+       "\n",
+       "       graded-price  box-only-price  manual-only-price  bgs-10-price  \\\n",
+       "3             15.11            17.0              38.94          58.0   \n",
+       "4             28.09            31.0              41.00          62.0   \n",
+       "5             32.76            36.0             109.86         165.0   \n",
+       "6             14.17            16.0              37.30          56.0   \n",
+       "7              7.85             9.0              38.29          57.0   \n",
+       "...             ...             ...                ...           ...   \n",
+       "30288         27.33            30.0              62.54          94.0   \n",
+       "30289         25.95            29.0             190.75         286.0   \n",
+       "30292         50.00            55.0              60.00          90.0   \n",
+       "30293         23.00            25.0              59.13          89.0   \n",
+       "30295         19.00            21.0              39.50          59.0   \n",
+       "\n",
+       "       condition-17-price  ...  name  set_num  types  supertype  subtypes  \\\n",
+       "3                    51.0  ...    10      282     36          2       102   \n",
+       "4                    15.8  ...   104      210     25          1         5   \n",
+       "5                   143.0  ...   104      307     25          1         5   \n",
+       "6                    48.0  ...   100      284     36          2        56   \n",
+       "7                    50.0  ...   100      284     36          2        56   \n",
+       "...                   ...  ...   ...      ...    ...        ...       ...   \n",
+       "30288                81.0  ...  3859      320      8          1         5   \n",
+       "30289               248.0  ...  3874      295      4          1        31   \n",
+       "30292                78.0  ...  3876       60      4          1         5   \n",
+       "30293                77.0  ...  3876      296      4          1         5   \n",
+       "30295                51.0  ...  3906      287      4          1        82   \n",
+       "\n",
+       "          hp  weaknesses rarity  legalities  resistances  \n",
+       "3        NaN          63     30           4           26  \n",
+       "4      170.0          19     12           4           18  \n",
+       "5      170.0          19     26           4           18  \n",
+       "6        NaN          63     30           4           26  \n",
+       "7        NaN          63     30           4           26  \n",
+       "...      ...         ...    ...         ...          ...  \n",
+       "30288  170.0          46     12           4            2  \n",
+       "30289  130.0          41      8           4            3  \n",
+       "30292  170.0          41     26           4            3  \n",
+       "30293  170.0          41     12           4            3  \n",
+       "30295  100.0          19     11           4           20  \n",
+       "\n",
+       "[19297 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price_guide_tcg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f3603ef-06ab-4f45-857b-7ac079e69c8f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
