Add perceptron code

--- a/Milestone4-Second-Model.ipynb
+++ b/Milestone4-Second-Model.ipynb
@@ -5,7 +5,7 @@
    "id": "59440d01-78d8-471a-9078-e2e118cb7bb6",
    "metadata": {},
    "source": [
-    "# Milestone 4 -- Second Model"
+    "# Milestone 4: Second Model"
    ]
   },
   {
@@ -18,15 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "id": "6f51e36e-1084-48fb-8c60-d846971a1919",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.utils.data import DataLoader, TensorDataset, random_split\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.metrics import accuracy_score, classification_report"
    ]
   },
   {
@@ -47,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "id": "2c2457f3-e40f-4887-a9ee-38f385398e4e",
    "metadata": {},
    "outputs": [
@@ -225,7 +228,7 @@
        "max         132960.000000   1837.000000    340.000000  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,11 +241,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "c0803e7b-32dc-403e-a8be-d84a3083c360",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         rarity          types generation  bgs-10-price  graded-price     hp  \\\n",
+      "0      Uncommon            NaN      Sixth           NaN           NaN    NaN   \n",
+      "1      Uncommon            NaN      Sixth           NaN           NaN    NaN   \n",
+      "2      Uncommon            NaN      Sixth           NaN           NaN    NaN   \n",
+      "3      Uncommon            NaN      Sixth          58.0         15.11    NaN   \n",
+      "4  Rare Holo EX  ['Lightning']      Sixth          62.0         28.09  170.0   \n",
+      "\n",
+      "   sales-volume  \n",
+      "0           5.0  \n",
+      "1           1.0  \n",
+      "2           1.0  \n",
+      "3           7.0  \n",
+      "4          81.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "subset_df = price_guide_tcg[['rarity', 'types', 'generation', 'bgs-10-price', 'graded-price', 'hp', 'sales-volume']].copy()\n",
+    "print(subset_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "02fbe86c-9484-41ed-82f1-f9136e3a34e3",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "thresholds = {\n",
+    "    'types': 1000  ,        # Minimum count for 'types'\n",
+    "    'rarity': 1000  ,    # Minimum count for 'rarity'\n",
+    "    'generation':1500\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "3cba3bce-1af9-4c1d-95c0-d3bcee853884",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col, threshold in thresholds.items():\n",
+    "    counts = subset_df[col].value_counts()\n",
+    "    valid_categories = counts[counts >= threshold].index\n",
+    "    subset_df = subset_df[subset_df[col].isin(valid_categories)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "f5069cd6-9deb-433d-bd8c-73cf1b317e21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18487, 7)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subset_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "477bd48f-7d94-48af-8fca-90ec74380094",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subset_df = subset_df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "9be3c06e-5fa2-494c-87c5-14f71f3a7d5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12759, 7)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subset_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "b5a53619-820a-4ee9-b051-aad9d48ad9ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rarity</th>\n",
+       "      <th>types</th>\n",
+       "      <th>generation</th>\n",
+       "      <th>bgs-10-price</th>\n",
+       "      <th>graded-price</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>sales-volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Uncommon</td>\n",
+       "      <td>['Grass']</td>\n",
+       "      <td>Sixth</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>15.01</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Common</td>\n",
+       "      <td>['Psychic']</td>\n",
+       "      <td>Sixth</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>9.28</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Common</td>\n",
+       "      <td>['Psychic']</td>\n",
+       "      <td>Sixth</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>16.34</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Uncommon</td>\n",
+       "      <td>['Grass']</td>\n",
+       "      <td>Sixth</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>23.00</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Uncommon</td>\n",
+       "      <td>['Grass']</td>\n",
+       "      <td>Sixth</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>15.01</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      rarity        types generation  bgs-10-price  graded-price     hp  \\\n",
+       "9   Uncommon    ['Grass']      Sixth          58.0         15.01   70.0   \n",
+       "12    Common  ['Psychic']      Sixth          36.0          9.28   60.0   \n",
+       "13    Common  ['Psychic']      Sixth          90.0         16.34   60.0   \n",
+       "16  Uncommon    ['Grass']      Sixth          58.0         23.00  120.0   \n",
+       "17  Uncommon    ['Grass']      Sixth          58.0         15.01  120.0   \n",
+       "\n",
+       "    sales-volume  \n",
+       "9            7.0  \n",
+       "12          29.0  \n",
+       "13          14.0  \n",
+       "16          24.0  \n",
+       "17          12.0  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subset_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,19 +475,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f5069cd6-9deb-433d-bd8c-73cf1b317e21",
+   "execution_count": 73,
+   "id": "fcfb55da-bf62-4caa-a2d4-e26f3633b7a0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "subset_df['rarity_grouped'] = subset_df['rarity'].map(\n",
+    "    lambda x: 'Common/Uncommon' if x in ['Common', 'Uncommon'] else 'Rare/Rare Holo'\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4ed2518-2398-4f67-b1d5-ec1860ad0c46",
+   "execution_count": 75,
+   "id": "849ea6c3-0d6a-4ce6-a0f9-3bb13322a8d4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "subset_df['rarity_encoded'] = subset_df['rarity_grouped'].map(\n",
+    "    {'Common/Uncommon': 0, 'Rare/Rare Holo': 1}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "25d1442d-41cf-4bab-bcac-2f2cad55fa3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder = OneHotEncoder()\n",
+    "types_encoded = encoder.fit_transform(subset_df[['types']]).toarray()\n",
+    "generation_encoded = encoder.fit_transform(subset_df[['generation']]).toarray()\n",
+    "numerical_features = ['bgs-10-price', 'graded-price', 'hp', 'sales-volume']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "415dabd2-8573-4ee3-971e-222cb3d966e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "numerical_data = scaler.fit_transform(subset_df[numerical_features])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "30caa999-9362-4d76-a166-e7149c02cf9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final features shape: (12759, 21)\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_features = np.hstack([types_encoded, generation_encoded, numerical_data])\n",
+    "print(f\"Final features shape: {final_features.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "ca4bdf5b-af49-4489-9e0f-c0748f5b9372",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = subset_df['rarity_encoded'].values\n",
+    "X_tensor = torch.tensor(final_features, dtype=torch.float32)\n",
+    "y_tensor = torch.tensor(y, dtype=torch.float32).unsqueeze(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "f6835305-37b6-4364-afd1-4827a38bd81e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = TensorDataset(X_tensor, y_tensor)\n",
+    "train_size = int(0.7 * len(dataset))\n",
+    "test_size = len(dataset) - train_size\n",
+    "train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "6d8eea41-0172-42ec-bcf7-9030ea797b25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NeuralNet(nn.Module):\n",
+    "    def __init__(self, input_size):\n",
+    "        super(NeuralNet, self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_size, 64)\n",
+    "        self.dropout1 = nn.Dropout(0.3)\n",
+    "        self.fc2 = nn.Linear(64, 32)\n",
+    "        self.dropout2 = nn.Dropout(0.3)\n",
+    "        self.fc3 = nn.Linear(32, 1)\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = torch.relu(self.fc1(x))\n",
+    "        x = self.dropout1(x)\n",
+    "        x = torch.relu(self.fc2(x))\n",
+    "        x = self.dropout2(x)\n",
+    "        x = self.sigmoid(self.fc3(x))\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "c0fb8a82-9261-4f3d-a6c7-8c7271ec700f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_size = final_features.shape[1]\n",
+    "model = NeuralNet(input_size)\n",
+    "\n",
+    "criterion = nn.BCELoss()  # Binary Cross-Entropy Loss\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "863e834f-075a-4a1a-91ee-23eb1bedb125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 50\n",
+    "for epoch in range(epochs):\n",
+    "    model.train()\n",
+    "    train_loss = 0.0\n",
+    "    for X_batch, y_batch in train_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(X_batch)\n",
+    "        loss = criterion(outputs, y_batch)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        train_loss += loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "bc0c981d-30af-475b-9d47-019e3cc13df0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "y_true = []\n",
+    "y_pred = []\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for X_batch, y_batch in test_loader:\n",
+    "        outputs = model(X_batch)\n",
+    "        predictions = (outputs > 0.5).float()\n",
+    "        y_true.extend(y_batch.numpy())\n",
+    "        y_pred.extend(predictions.numpy())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -278,24 +657,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0f69399a-ebc2-4744-bc9d-5545a0d32312",
+   "execution_count": 94,
+   "id": "0df37e0c-9798-409c-8554-4b3d18e5fa68",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_true = np.array(y_true).flatten()\n",
+    "y_pred = np.array(y_pred).flatten()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "33c2944e-3e0b-4179-aaca-a92ae1cce626",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7855276907001045\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.79      0.88      0.83      2285\n",
+      "         1.0       0.78      0.65      0.71      1543\n",
+      "\n",
+      "    accuracy                           0.79      3828\n",
+      "   macro avg       0.78      0.76      0.77      3828\n",
+      "weighted avg       0.79      0.79      0.78      3828\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy:\", accuracy_score(y_true, y_pred))\n",
+    "print(\"Classification Report:\\n\", classification_report(y_true, y_pred))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f45f76f0-5e82-48a6-b8cc-a2a83aa90caf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9f65a7b-cff0-48e2-83c8-83a162ae228d",
+   "id": "6db551ba-a661-4da5-834b-163352d4aec1",
    "metadata": {},
    "outputs": [],
    "source": []
