Added confusion matrix + working on readme questions

--- a/Milestone4-Second-Model.ipynb
+++ b/Milestone4-Second-Model.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 73,
    "id": "6f51e36e-1084-48fb-8c60-d846971a1919",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
     "from torch import nn\n",
     "from torch.utils.data import DataLoader, TensorDataset, random_split\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "from sklearn.metrics import accuracy_score, classification_report"
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
    ]
   },
   {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "33c2944e-3e0b-4179-aaca-a92ae1cce626",
    "metadata": {},
    "outputs": [
@@ -770,13 +770,17 @@
       "    accuracy                           0.84      3790\n",
       "   macro avg       0.83      0.83      0.83      3790\n",
       "weighted avg       0.84      0.84      0.84      3790\n",
-      "\n"
+      "\n",
+      "Confusion Matrix:\n",
+      " [[1997  270]\n",
+      " [ 343 1180]]\n"
      ]
     }
    ],
    "source": [
     "print(\"Accuracy:\", accuracy_score(y_true, y_pred))\n",
-    "print(\"Classification Report:\\n\", classification_report(y_true, y_pred))"
+    "print(\"Classification Report:\\n\", classification_report(y_true, y_pred))\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_true, y_pred))"
    ]
   }
  ],
